--- a/mie/doc/simul.bib
+++ b/mie/doc/simul.bib
@@ -3062,4 +3062,27 @@
   keywords = {M\"{o}bius transform, Steiner tree, convolution},
 }
 
+@article{hnizdo2007,
+  author = {Hnizdo, Vladimir and Darian, Eva and Fedorowicz, Adam and Demchuk, Eugene and Li, Shengqiao and Singh, Harshinder},
+  title = {Nearest-neighbor nonparametric method for estimating the configurational entropy of complex molecules},
+  journal = {Journal of Computational Chemistry},
+  year = {2007},
+  volume = {28},
+  number = {3},
+  publisher = {Wiley Subscription Services, Inc., A Wiley Company},
+  issn = {1096-987X},
+  pages = {655--668},
+  keywords = {configurational entropy, internal rotation, nearest neighbor, mutual information, computer simulations},
+  doi = {10.1002/jcc.20589}
+}
 
+@article{killian2007,
+  author = {Benjamin J. Killian and Joslyn Yundenfreund Kravitz and Michael K. Gilson},
+  title = {Extraction of configurational entropy from molecular simulations via an expansion approximation},
+  journal = {The Journal of Chemical Physics},
+  volume = {127},
+  number = {2},
+  pages = {024107},
+  year = {2007},
+  doi = {10.1063/1.2746329}
+}
